src/primitives/transaction_identifier.h
@@ -11,6 +11,7 @@
 
 #include <compare>
 #include <concepts>
+#include <string_view>
 #include <tuple>
 #include <variant>
 
@@ -34,6 +35,7 @@ class transaction_identifier
 
 public:
     transaction_identifier() : m_wrapped{} {}
+    consteval explicit transaction_identifier(std::string_view hex_str) : m_wrapped{uint256{hex_str}} {}
 
     template <typename Other>
     bool operator==(const Other& other) const { return Compare(other) == 0; }
